Ticket #25510 - Fix for anchor being wrong if anchor side is calculated before sys tray geometry is valid - Fix for project icons getting cut off if the project text is too long

--- a/resources/desktop_dark.css
+++ b/resources/desktop_dark.css
@@ -100,6 +100,12 @@
     subcontrol-position: none;
 }
 
+#stack
+{
+    border-top: 1px solid rgb(20, 20, 20);
+    border-bottom: 1px solid rgb(20, 20, 20);
+}
+
 #footer QPushButton
 {
     border: 1px solid transparent;
